[package]
name = "metal_review"
version = "0.1.0"
authors = ["Sam Smith <13868670+SamHSmith@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "*"
vk-sys = "0.5.1"
vulkano= "0.18.0"
vulkano-shaders="0.18.0"


[build]
